[gd_scene load_steps=31 format=3 uid="uid://dbbd0e4tcevj1"]

[ext_resource type="Script" path="res://Scripts/Enemies/shield_enemy_base.gd" id="1_t871a"]
[ext_resource type="Texture2D" uid="uid://b3bwcq37g5jv6" path="res://Sprites/Tiles/Tile2.png" id="2_op65x"]
[ext_resource type="Texture2D" uid="uid://dr8fvxm582nds" path="res://Sprites/Player/maleBase/base/base_dark8.png" id="3_rpxqq"]
[ext_resource type="Texture2D" uid="uid://dojr0tf8krxln" path="res://Sprites/Player/maleBase/base/base_dark9.png" id="4_itb6b"]
[ext_resource type="Texture2D" uid="uid://cabchjotgjwd2" path="res://Sprites/Player/maleBase/base/base_dark10.png" id="5_bmyo3"]
[ext_resource type="Texture2D" uid="uid://b606ix5vt7h6a" path="res://Sprites/Player/maleBase/base/char1.png" id="6_u14ao"]
[ext_resource type="Texture2D" uid="uid://jqhysk0tda26" path="res://Sprites/Player/maleBase/base/char18.png" id="7_n43sn"]
[ext_resource type="Texture2D" uid="uid://ci6b1iisoasmh" path="res://Sprites/Player/maleBase/base/char2.png" id="8_vcjyx"]
[ext_resource type="Texture2D" uid="uid://qpvy7nerblwc" path="res://Sprites/Player/maleBase/base/char3.png" id="9_4ojsf"]
[ext_resource type="Texture2D" uid="uid://c04l0adjdaivd" path="res://Sprites/Player/maleBase/base/char4.png" id="10_7w85w"]
[ext_resource type="Texture2D" uid="uid://dcuqd52omdmog" path="res://Sprites/Player/maleBase/base/char5.png" id="11_x45it"]
[ext_resource type="Texture2D" uid="uid://cdihgtxj33d5x" path="res://Sprites/Player/maleBase/base/char7.png" id="12_k5vv3"]
[ext_resource type="Texture2D" uid="uid://rw61ggynusn7" path="res://Sprites/Player/maleBase/base/char6.png" id="13_bnobk"]
[ext_resource type="Texture2D" uid="uid://dl03ttlb24ada" path="res://Sprites/Explosion/explosion1.png" id="14_k68ed"]
[ext_resource type="Texture2D" uid="uid://dt4xoaxgrgijr" path="res://Sprites/Explosion/explosion2.png" id="15_ir0vn"]
[ext_resource type="Texture2D" uid="uid://b5gger2f4230r" path="res://Sprites/Explosion/explosion3.png" id="16_2rjrx"]
[ext_resource type="Texture2D" uid="uid://bodebyb4vgk07" path="res://Sprites/Explosion/explosion4.png" id="17_5wytn"]
[ext_resource type="Texture2D" uid="uid://biskv30bbbw7q" path="res://Sprites/Explosion/explosion5.png" id="18_0ktms"]
[ext_resource type="Texture2D" uid="uid://cb2clutnd13pb" path="res://Sprites/Explosion/explosion6.png" id="19_keh1p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xmtb7"]
size = Vector2(18, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gss8k"]
size = Vector2(24.3077, 50)

[sub_resource type="SpriteFrames" id="SpriteFrames_81sey"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_rpxqq")
}, {
"duration": 1.0,
"texture": ExtResource("4_itb6b")
}, {
"duration": 1.0,
"texture": ExtResource("5_bmyo3")
}],
"loop": false,
"name": &"crouch",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_u14ao")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_n43sn")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_vcjyx")
}, {
"duration": 1.0,
"texture": ExtResource("9_4ojsf")
}, {
"duration": 1.0,
"texture": ExtResource("10_7w85w")
}, {
"duration": 1.0,
"texture": ExtResource("11_x45it")
}, {
"duration": 1.0,
"texture": ExtResource("12_k5vv3")
}, {
"duration": 1.0,
"texture": ExtResource("13_bnobk")
}],
"loop": true,
"name": &"walk",
"speed": 8.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_ahjkr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_k68ed")
}, {
"duration": 1.0,
"texture": ExtResource("15_ir0vn")
}, {
"duration": 1.0,
"texture": ExtResource("16_2rjrx")
}, {
"duration": 1.0,
"texture": ExtResource("17_5wytn")
}, {
"duration": 1.0,
"texture": ExtResource("18_0ktms")
}, {
"duration": 1.0,
"texture": ExtResource("19_keh1p")
}],
"loop": false,
"name": &"default",
"speed": 15.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_nu0fw"]
height = 80.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ndgb0"]
radius = 5.26316
height = 41.9615

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vh2oe"]
size = Vector2(20.7143, 37.0463)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_knqub"]
size = Vector2(36.6705, 46.3925)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_7g28x"]
b = Vector2(-15, 40)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_jnimy"]
b = Vector2(15, 40)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_m43r0"]

[node name="ShieldEnemyBase" type="CharacterBody2D" groups=["enemies"]]
scale = Vector2(2.5, 2.5)
collision_layer = 0
script = ExtResource("1_t871a")

[node name="CollisionBox" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 11)
scale = Vector2(0.6, 1)
shape = SubResource("RectangleShape2D_xmtb7")

[node name="Shield" type="StaticBody2D" parent="."]
position = Vector2(0, 11)
collision_layer = 0
collision_mask = 0

[node name="Sprite2D" type="Sprite2D" parent="Shield"]
modulate = Color(0.662745, 0.172549, 0.74902, 1)
position = Vector2(13, 1)
scale = Vector2(0.279999, 1.2)
texture = ExtResource("2_op65x")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shield"]
position = Vector2(13, 1)
scale = Vector2(0.377079, 0.782559)
shape = SubResource("RectangleShape2D_gss8k")
disabled = true

[node name="ShieldArea" type="Area2D" parent="Shield"]
position = Vector2(13, 1)
scale = Vector2(0.580037, 0.536284)
collision_layer = 2
collision_mask = 2

[node name="Shape" type="CollisionShape2D" parent="Shield/ShieldArea"]
position = Vector2(-1.90735e-06, 0)
scale = Vector2(0.697079, 1.44349)
shape = SubResource("RectangleShape2D_gss8k")

[node name="EnemySprite" type="AnimatedSprite2D" parent="."]
modulate = Color(1, 0.458824, 0.458824, 1)
sprite_frames = SubResource("SpriteFrames_81sey")
animation = &"crouch"
autoplay = "walk"

[node name="ExplosionSprite" type="AnimatedSprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.65098)
position = Vector2(0, 16)
scale = Vector2(1.4, 1.4)
sprite_frames = SubResource("SpriteFrames_ahjkr")

[node name="NavigationAgent" type="NavigationAgent2D" parent="."]
path_desired_distance = 200.0
target_desired_distance = 100.0
debug_enabled = true

[node name="TurnAroundTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="KnockbackTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="TurnToPlayerTimer" type="Timer" parent="."]
one_shot = true

[node name="ChargeTimeout" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="ChargeDuration" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Hurtbox" type="Area2D" parent="."]
visible = false
position = Vector2(-1.19209e-07, 11)
scale = Vector2(0.6, 0.56)
collision_layer = 4
collision_mask = 0

[node name="HurtboxShape" type="CollisionShape2D" parent="Hurtbox"]
scale = Vector2(0.640001, 1)
shape = SubResource("CapsuleShape2D_nu0fw")

[node name="Hitbox" type="Area2D" parent="."]
visible = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(6, 11)
scale = Vector2(2.51538, 1.04)
shape = SubResource("CapsuleShape2D_ndgb0")

[node name="WallCheck" type="Area2D" parent="."]
visible = false
position = Vector2(0, 11)
collision_layer = 0
collision_mask = 8

[node name="Shape" type="CollisionShape2D" parent="WallCheck"]
position = Vector2(16, -1)
scale = Vector2(0.850026, 0.64196)
shape = SubResource("RectangleShape2D_vh2oe")

[node name="PlayerCheck" type="Area2D" parent="."]
monitorable = false

[node name="Shape" type="CollisionShape2D" parent="PlayerCheck"]
position = Vector2(95.2209, 11)
scale = Vector2(6.5, 1.8)
shape = SubResource("RectangleShape2D_knqub")

[node name="LedgeCheckLeft" type="Area2D" parent="."]
visible = false
collision_layer = 8
collision_mask = 8

[node name="Left" type="CollisionShape2D" parent="LedgeCheckLeft"]
shape = SubResource("SegmentShape2D_7g28x")

[node name="LedgeCheckRight" type="Area2D" parent="."]
visible = false
collision_layer = 8
collision_mask = 8

[node name="Right" type="CollisionShape2D" parent="LedgeCheckRight"]
shape = SubResource("SegmentShape2D_jnimy")

[node name="ChaseArea" type="Area2D" parent="."]
visible = false
monitorable = false

[node name="ChaseCollisionBox" type="CollisionShape2D" parent="ChaseArea"]
position = Vector2(0, 12)
scale = Vector2(34.4, 6.87257)
shape = SubResource("CapsuleShape2D_m43r0")

[connection signal="body_entered" from="Shield/ShieldArea" to="." method="_on_shield_area_body_entered"]
[connection signal="animation_finished" from="ExplosionSprite" to="." method="_on_explosion_sprite_animation_finished"]
[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]
[connection signal="timeout" from="KnockbackTimer" to="." method="_on_knockback_timer_timeout"]
[connection signal="timeout" from="TurnToPlayerTimer" to="." method="_on_turn_to_player_timer_timeout"]
[connection signal="timeout" from="ChargeDuration" to="." method="_on_charge_duration_timeout"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_entered" from="WallCheck" to="." method="_on_wall_check_body_entered"]
[connection signal="body_entered" from="PlayerCheck" to="." method="_on_player_check_body_entered"]
[connection signal="body_exited" from="LedgeCheckLeft" to="." method="_on_ledge_check_left_body_exited"]
[connection signal="body_exited" from="LedgeCheckRight" to="." method="_on_ledge_check_right_body_exited"]
[connection signal="body_exited" from="ChaseArea" to="." method="_on_chase_area_body_exited"]
